# medibot-agents

./: .env.example  .gitignore  README.md  pyproject.toml
src/medibot/: .gitignore  crew.py  main.py
src/medibot/config/: agents.yaml  tasks.yaml
src/medibot/tools/: custom_tool.py  human_tool.py  token.json
